[tool.poetry]
name = "repl_python3_littlepincess2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
tasks = "^2.8.0"
pandas = "^1.5.3"
pygsheets = "^2.0.6"
gspread = "^5.7.2"
Flask = "2.2.3"
gevent = "^22.10.2"
aiofiles = "^23.1.0"
bs4 = "^0.0.1"
schedule = "^1.2.0"
replit = "^3.2.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
